# interprocessdataflow

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
cmake/: FindBoost.cmake
src/ipdf/: MemoryPool.h  ShmBufferPool.h  ShmBufferRef.h  ShmChannel.h  ShmPort.h  ShmPortCondition.h  ShmStream.h  StreamMessage.h  ipdf.h
tests/: CMakeLists.txt  boost_unit_test_framework.cpp  consumer.cpp  ipdf_test.cpp  ipdf_test.h  main.cpp  memorypool_check.cpp  memorypool_check.h  producer1.cpp  producer2.cpp  test_bufferpool.cpp  test_bufferpool.h  test_main.cpp  test_port.cpp  test_port.h  test_stream.cpp  test_stream.h
